# polka-link-substrate

./: .gitignore  package.json  pnpm-lock.yaml
frontend-template/: pnpm-lock.yaml
server/: .env  go.mod  go.sum  main.go
server/db/: pg.go
server/handlers/: user.go  verification.go
server/models/: user.go
server/utils/: challenge.go  mail.go  verify.go
substrate/: Cargo.toml
substrate/pallets/service_provider/: Cargo.toml
substrate/pallets/service_provider/src/: lib.rs  mock.rs  tests.rs
substrate/pallets/user_identity/: Cargo.toml
substrate/pallets/user_identity/src/: lib.rs  mock.rs  tests.rs
substrate/runtime/: Cargo.toml
substrate/runtime/src/: lib.rs
